dimdisplay: only dim the screen at configured dim time

The current logic is completely broken:

1. It disables the screen at `m_dimOnIdleTime` even though disabling
   the screen is handled elsewhere with a separate timeout, and the logic
   here has prefix "Dim*" so has nothing to do with disabling it.
2. It does not follow the timeout configured by a user (that is the
   `m_dimOnIdleTime`) and instead dims the screen at completely
   arbitrary 50% and 75% periods of the configured time.

Let's get rid of all that and only do exactly what the user asked: dim
the screen at `m_dimOnIdleTime`.

BUG: 304696
FIXED-IN: 5.27.8